Fixing some of the positioning for the search toolbar on mobile nav

--- a/src/scss/04-layouts/_header.scss
+++ b/src/scss/04-layouts/_header.scss
@@ -89,6 +89,7 @@
   display: none;
   position: fixed;
   bottom: mx.px-to-rem(66px);
+  left: 0;
   box-shadow: 0 0 25px 0px #000;
   z-index: 2;
   padding: 1rem 0;
